@@ -1351,29 +1351,11 @@ int igraph_evolver_ad(const igraph_t *graph,
 		      igraph_matrix_t *norm,
 		      igraph_matrix_t *cites,
 		      igraph_matrix_t *expected,
+		      igraph_real_t *logprob,
+		      igraph_real_t *lognull,
 		      const igraph_matrix_t *debug,
 		      igraph_vector_ptr_t *debugres);
 int igraph_evolver_mes_ad(const igraph_t *graph,
-			  igraph_matrix_t *kernel,
-			  igraph_matrix_t *sd,
-			  igraph_matrix_t *norm,
-			  igraph_matrix_t *cites,
-			  const igraph_matrix_t *debug,
-			  igraph_vector_ptr_t *debugres,
-			  const igraph_vector_t *st,
-			  igraph_integer_t pmaxind,
-			  igraph_integer_t agebins);
-int igraph_evolver_ad2(const igraph_t *graph,
-		      igraph_integer_t niter,
-		      igraph_integer_t agebins,
-		      igraph_matrix_t *kernel,
-		      igraph_matrix_t *sd,
-		      igraph_matrix_t *norm,
-		      igraph_matrix_t *cites,
-		      igraph_matrix_t *expected,
-		      const igraph_matrix_t *debug,
-		      igraph_vector_ptr_t *debugres);
-int igraph_evolver_mes_ad2(const igraph_t *graph,
 			  igraph_matrix_t *kernel,
 			  igraph_matrix_t *sd,
 			  igraph_matrix_t *norm,
@@ -1392,6 +1374,13 @@ int igraph_evolver_exp_ad(const igraph_t *graph,
 			  const igraph_vector_t *st,
 			  igraph_integer_t pmaxind,
 			  igraph_integer_t agebins);
+int igraph_evolver_error_ad(const igraph_t *graph, 
+			    const igraph_matrix_t *kernel,
+			    const igraph_vector_t *st,
+			    igraph_integer_t pmaxind,
+			    igraph_integer_t pagebins,
+			    igraph_real_t *logprob,
+			    igraph_real_t *lognull);
 
 /* -------------------------------------------------- */
 /* Other, not graph related                           */
