@@ -1,5 +1,9 @@
 2007-04-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
+	* interfaces/R/igraph/R/revolver.R (evolver.ad) 
+	* interfaces/R/src/rinterface.c (R_igraph_evolver_ad) :
+	error calculation added
+
 	* interfaces/R/igraph/R/revolver.R (evolver.d) : error argument added
 	* interfaces/R/src/rinterface.c (R_igraph_evolver_d) : error calculation
 	added
